Fixed CodeMirror sizing on mobile version

--- a/style.css
+++ b/style.css
@@ -142,8 +142,6 @@ main {
     background-color: #2B2F36;
     font-family: Consolas, Menlo, Monaco, "Lucida Console";
     font-size: 1.2rem;
-
-    overflow: hidden;
 }
 @media (orientation: portrait) {
     #code {
@@ -154,11 +152,11 @@ main {
 }
 #codearea {
     width: 100%;
-    height: 100%;
+    height: calc( 100% - 3rem );
 }
 .CodeMirror {
     width: 100%;
-    height: calc( 100% - 3rem );
+    height: 100%;
 }
 .CodeMirror-lines {
     padding: 0;
